# CppCIExample

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
test/: CMakeLists.txt  test_math.cpp
